@@ -1,3 +1,13 @@
+2010-05-13 Harald Oehlmann < oehhar@users.sourceforge.net>
+
+	* listbox.tcl(ListBox::_configureSelectmode) Drag modifies
+	multiple selection [Bug 2995969] reported by Robert Karen.
+	Bound events on ButtonRelease-1 instead Button-1 for multiple
+	selections to avoid bug.
+	* listbox.tcl(ListBox::_drag_and_drop) The default drag and drop
+	routine only handled single drag and drop.
+	It was extended to handle also drag and drop of multiple entries.
+
 2009-09-03 Harald Oehlmann  <oehhar@users.sourceforge.net>
 
 	* util.tcl(BWidget::place), BWidget.html Widget placed incorrectly,
